Modify title and add server rules to index.html
Updated title and added server rules section to the overlay.

--- a/index.html
+++ b/index.html
@@ -3,25 +3,28 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Pablograd Roleplay – Loading Screen</title>
+  <title>Pablo's Roleplay – Loading Screen</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div id="slideshow" aria-hidden="true"></div>
 
-  <!-- UI Overlay -->
   <div id="overlay" aria-hidden="true">
-    <div class="headline"><span>Pablograd Roleplay</span></div>
+    
+    <div class="headline"><span>Pablo's Roleplay</span></div>
 
-    <!-- Rahmen für den echten GMod Download-Balken (unten rechts) -->
-    <div class="gmod-download-frame">
-      <!--
-        HINWEIS:
-        Das ist NUR die rote Umrandung.
-        Der echte graue GMod-Downloadbalken wird vom Spiel selbst
-        unten rechts darüber gerendert.
-      -->
+    <div class="rules-box">
+      <h2>SERVER RULES</h2>
+      <ol>
+        <li>No Random Deathmatch (RDM).</li>
+        <li>Act realistically: Value your life and stay in character.</li>
+        <li>Respect the Staff team and follow their instructions.</li>
+        <li>VDM is only allowed with a valid Roleplay reason.</li>
+        <li>This is Serious RP, not standard DarkRP. High standards are expected.</li>
+      </ol>
     </div>
+
+    <div class="gmod-download-frame"></div>
   </div>
 
   <script>
